# osmMachine

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
GeoBase/: CGeoPoint.cpp  CGeoPoint.h  GeoDefs.h  GeoUtils.cpp  GeoUtils.h
Test/: Test_CGeoPoint.cpp  Test_GeoUtils.cpp
osmProto/: fileFormat.proto  osmFormat.proto
pythonTools/: distHelper.py  distanceFromPoint.py  drawClosestRoad.py  drawGPSTrace.py  geoZoneMonitorTests.py  lineIntersectionTests-Horizontal.py  lineIntersectionTests-Other.py  lineIntersectionTests-Vertical.py  lineIntersectionTests.py  parseOsm.py  projectionOffShape1.py  projectionOffShape2.py  projectionOnShape1.py  projectionOnShape2.py  tileUtils.py
pythonTools/mapData/: map.osm
src/GeoBase/: CBoundingBox.cpp  CBoundingBox.h  CGeoBucket.h  CGeoIndex.cpp  CGeoIndex.h  CGeoJSON.h  CGeoPoint.cpp  CGeoPoint.h  CMakeLists.txt  CTileUtils.cpp  CTileUtils.h  CmakeLists.txt  GeoDefs.h  GeoUtils.cpp  GeoUtils.h
src/GeoJSON/: CGeoJSON.cpp  CGeoJSON.h  CGeoJSONFeature.cpp  CGeoJSONFeature.h  CGeoJSONUtils.cpp  CGeoJSONUtils.h  CGeometry.cpp  CGeometry.h  CMakeLists.txt  CMultiPointGeometry.cpp  CMultiPointGeometry.h  CMultiShapeGeometry.cpp  CMultiShapeGeometry.h  CPointGeometry.cpp  CPointGeometry.h  GeoJSON.h  GeoJSONTypes.h  IGeoJSONElement.h
src/GeoZoneMonitor/: CGeoZoneMonitor.cpp  CGeoZoneMonitor.h  CLineIntersectionDetector.cpp  CLineIntersectionDetector.h  CMakeLists.txt  CPolylineZoneMonitor.cpp  CPolylineZoneMonitor.h  CSimpleZoneMonitor.cpp  CSimpleZoneMonitor.h  IGeoZoneMonitor.h
src/Logger/: CLoggerMsg.cpp  CLoggerMsg.h  CMakeLists.txt  CSimpleLogger.cpp  CSimpleLogger.h  ILogger.h  Logger.h
src/Test/: CLineIntersectionDetectorTests.cpp  CMakeLists.txt  COSMRoutingPointSetTest.cpp  CPolylineZoneMonitorTests.cpp  CSimpleZoneMonitorTests.cpp  GeoBase_BoundingBoxTests.cpp  GeoBase_CGeoPoint.cpp  GeoBase_CGeoUtils.cpp  GeoBase_CTileUtils.cpp  GeoJSON_CGeoJSONFeatureTest.cpp  Test_GeoUtils.cpp  featureTests.cpp  fullStackMatcherTest.cpp  geoBucketTuner.cpp  osmCore_CGeoBucket.cpp  osmReader.cpp  pbfreader.cpp  routerFullStackTests.cpp  tileSizeTable.cpp  tileTestHelper.cpp
src/Utils/: CMakeLists.txt  CTimespanMeter.cpp  CTimespanMeter.h
src/osmCore/: CGPSPosition.cpp  CGPSPosition.h  CGeoBucket.h  CMakeLists.txt  COSMNode.cpp  COSMNode.h  COSMPosition.cpp  COSMPosition.h  COSMWay.cpp  COSMWay.h  CRoutingPathSegment.cpp  CRoutingPathSegment.h  CShapePoint.cpp  CShapePoint.h  CWaySegment.cpp  CWaySegment.h  OSMCore.h  OSMRoutingNetwork.h
src/osmEngine/: CMakeLists.txt  COSMEngine.cpp  COSMEngine.h  COSMMapMatcher.cpp  COSMMapMatcher.h  COSMPosition.cpp  COSMPosition.h  IOSMMapMatcher.h  OSMConfiguration.h
src/osmParser/: COSMParser.cpp  COSMParser.h
src/osmReader/: CMakeLists.txt  COSMMapFileReader.cpp  COSMMapFileReader.h  COSMModelBuilder.cpp  COSMModelBuilder.h  COSMNetworkValidator.cpp  COSMNetworkValidator.h  COSMParser.cpp  COSMParser.h  CPBFReader.cpp  CPBFReader.h  IOSMMapFileReader.h  IOSMModelBuilder.h  fileFormat.pb.cc  fileFormat.pb.h  osmFormat.pb.cc  osmFormat.pb.h
src/osmRouter/: CMakeLists.txt  COSMRoutePoint.cpp  COSMRoutePoint.h  COSMRouter.cpp  COSMRouter.h  COSMRoutingPointSet.cpp  COSMRoutingPointSet.h  CRoutePathBuilder.cpp  CRoutePathBuilder.h  CSimpleDistanceHeuristics.cpp  CSimpleDistanceHeuristics.h  CSimpleDistanceUtilityFunction.cpp  CSimpleDistanceUtilityFunction.h  IExpectedScoreHeuristics.h  IOSMRouter.h  IOSMRoutingUtilityFunction.h  IRoutingUtilityFunction.h
tests/: CSimpleZoneMonitorTests.cpp  GeoBase_CGeoPoint.cpp  GeoJSON_CGeoJSONFeatureTest.cpp  GeoJSON_CGeometryTests.cpp  geoBucketTuner.cpp  osmCore_CGeoBucket.cpp  routerFullStackTests.cpp  tileSizeTable.cpp  tileTestHelper.cpp  tileTestHelper.h
